[workspace]
members = [
]

[package]
name = "windowlab"
authors = ["Nick Gravgaard", "Jan Alexandra Katz"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "c2rust_out"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/main.rs"
name = "windowlab"

[dependencies]
libc = "0.2"
x11 = "2.18"



